objects/BICE_Fin_Account__c.object
<CustomObject>
    <fields>
        <fullName>CIF_Fin_Product_Id__c</fullName>
        <description>This is the external unique identifier for BICE products (financial accounts) owned by BICE customers.  Should map to CIF system into PRODUC table: NUM_CLIENTE (18) + &apos;-&apos; +COD_PRODUCTO (5) + &apos;-&apos; + NUM_OPERACION (18)  [Maximum Length: 18+1+5+1+18=43 characters long]</description>
        <externalId>true</externalId>
        <label>CIF Fin Product Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>COD_ESTADO_PROD__c</fullName>
        <description>CODIGO DE ESTADO DEL PRODUCTO   BCT.DESCOD(ESTPROD)
Data proporcionada por Selim Arabia Valenzuela 20170426 2018</description>
        <label>Código Estado del Producto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COD_MONEDA__c</fullName>
        <description>CODIGO DE MONEDA   BCT.DESCOD(MONEDAS) [English Translation: Currency Code]</description>
        <label>Código de Moneda</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_MOTIVO_CIERRE__c</fullName>
        <description>MOTIVO DE CIERRE DEL PRODUCTO(CODIGO)   BCT.DESCOD(MOTCIE)
Data proporcionada por Selim Arabia Valenzuela 20170426 2018</description>
        <label>Código Motivo de Cierre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COD_PRODUCTO__c</fullName>
        <description>CODIGO DE PRODUCTO   BCT.DESCOD(MPRODU)</description>
        <label>Código Producto</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_REG_STATUS__c</fullName>
        <description>Estado del registro(0 Activo, 1 Eliminado, 2 Modificado, 7 Reg. Inicial)</description>
        <label>Código Registro Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_RELAC_PROD__c</fullName>
        <description>TIPO DE RELACION CON PRODUCTO   BCT.DESCOD(TIPREPRO)</description>
        <label>Código Tipo de Relación con Producto</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_SUCURSAL__c</fullName>
        <description>CODIGO DE SUCURSAL   BCT.SUCURS [English translation: Branch Code]</description>
        <label>Código de Sucursal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_TIPO_PRODU__c</fullName>
        <description>CODIGO TIPO DE PRODUCTO   BCT.DESCOD(TIPOPROD)</description>
        <label>Código Tipo de Producto</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_comercial__c</fullName>
        <label>Calle comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_particular__c</fullName>
        <label>Calle particular</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular__c</fullName>
        <label>Celular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ciudad_comercial__c</fullName>
        <label>Ciudad o Provincia comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_particular__c</fullName>
        <label>Ciudad o Provincia particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comuna_comercial__c</fullName>
        <label>Comuna comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comuna_particular__c</fullName>
        <label>Comuna particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BICE Fin Accounts</relationshipLabel>
        <relationshipName>BICE_Fin_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_de_cuentas__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Executive on this BICE Financial account</description>
        <label>Ejecutivo de cuentas</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BICE_Fin_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_especialista__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo especialista</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BICE_Fin_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FEC_ACTIVACION__c</fullName>
        <description>FECHA DE ACTIVACION DEL PRODUCTO</description>
        <label>Fecha de Activación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEC_APERTURA__c</fullName>
        <description>FECHA DE APERTURA DEL PRODUCTO</description>
        <label>Fecha de Apertura del Producto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEC_CIERREPROD__c</fullName>
        <description>FECHA DE CIERRE DE PRODUCTO</description>
        <label>Fecha de Cierre del Producto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLS_NICKNAME__c</fullName>
        <description>SINONIMO DEL PRODUCTO</description>
        <label>Gls Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inf_adicional_direccion_comercial__c</fullName>
        <label>Inf adicional dirección comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inf_adicional_direccion_particualr__c</fullName>
        <label>Inf adicional dirección particualr</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTO_PRODUCTO2__c</fullName>
        <description>MONTO ASOCIADO AL PRODUCTO</description>
        <label>Monto Asociado al Producto2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTO_PRODUCTO__c</fullName>
        <description>MONTO ASOCIADO AL PRODUCTO, DEPENDE DEL PRODUCTO</description>
        <label>Monto Asociado al Producto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NUM_CLIENTE__c</fullName>
        <description>CODIGO DE IDENTIFICACION DEL CLIENTE</description>
        <label>Número de Cliente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUM_ROL_EMPLEADO__c</fullName>
        <label>Num Rol Empleado</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Operacion__c</fullName>
        <description>NUMERO DE OPERACIÓN PRODUCTO</description>
        <label>Num Operación</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_comercial__c</fullName>
        <label>Número dirección comercial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_particular__c</fullName>
        <label>Número dirección particular</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais_comercial__c</fullName>
        <label>País comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais_particular__c</fullName>
        <label>País particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Lookup from BICE_Fin_Account__c to Product2 object to indicate the BICE Product for this financial account.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BICE Fin Accounts</relationshipLabel>
        <relationshipName>BICE_Fin_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_comercial__c</fullName>
        <label>Región comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_particular__c</fullName>
        <label>Región particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_comercial__c</fullName>
        <label>Teléfono comercial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_particular__c</fullName>
        <label>Teléfono particular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X360_view_Product_Family__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>360 view Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>BICE Fin Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>COD_PRODUCTO__c</columns>
        <columns>Ejecutivo_de_cuentas__c</columns>
        <columns>COD_MONEDA__c</columns>
        <columns>FEC_APERTURA__c</columns>
        <columns>FEC_ACTIVACION__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CIF_Fin_Product_Id__c</columns>
        <columns>X360_view_Product_Family__c</columns>
        <columns>COD_RELAC_PROD__c</columns>
        <columns>COD_TIPO_PRODU__c</columns>
        <columns>Customer__c</columns>
        <columns>GLS_NICKNAME__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BICE Fin Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BICE Fin Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>